datasets load their name, new plotting

--- a/notebooks/scalp_demo_2.ipynb
+++ b/notebooks/scalp_demo_2.ipynb
@@ -59,8 +59,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maxdatasets = 5 # USE THIS EVERYWHERE\n",
-    "maxcells = 1000\n",
+    "maxdatasets = 3# USE THIS EVERYWHERE\n",
+    "maxcells = 700\n",
     "datasets = list(scalp.data.scmark(scalp.test_config.scmark_datapath,  maxdatasets=maxdatasets,  maxcells = maxcells ))\n",
     "datasets += list(scalp.data.timeseries(scalp.test_config.timeseries_datapath,  maxdatasets=maxdatasets,  maxcells = maxcells ))\n",
     "datasets +=list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=maxdatasets,  maxcells = maxcells ))\n",
@@ -195,16 +195,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea508dfd-dc66-4419-94e8-dfa555646aaa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "st.uns['neighbors']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "e7bb6d0e-400c-4921-8fec-56e48465e7d0",
    "metadata": {},
@@ -237,39 +227,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31df885c-0dfc-4d06-a70f-e0c4c048f0ac",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "65bdb938-8134-4b2e-9992-3c5fea021cf8",
    "metadata": {},
    "source": [
     "# SCALP"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bd17d3e4-abc6-430b-8215-d6b1f2154a85",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# scalp.plot(st, color=['batch','label'])\n",
-    "dataset\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e2945716-5a95-4b36-8c3a-51f671007332",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -293,7 +256,7 @@
     "    ax.set_yticks(ticks)\n",
     "    ax.grid(True, color='white', linestyle='--', linewidth=0.5)\n",
     "\n",
-    "def Scalp(dataset, dim = 2, ot= .64):\n",
+    "def Scalp(dataset, dim = 2, ot= .54):\n",
     "    parm = {'neighbors_total': 60, 'intra_neighbors_mutual': False,\n",
     "            'neighbors_intra_fraction': .33, 'add_tree': False, \"epsilon\":-1,\n",
     "                  'copy_lsa_neighbors': False, 'horizonCutoff':0, # this hz cutoff is what we look at \n",
@@ -318,7 +281,9 @@
     "\n",
     "    #grap = scalp.graph.integrate(dataset,hub1_algo = 3, hub1_k = 11, hub2_algo=0, hub2_k=12,  k=11, dataset_adjacency=None,  outlier_threshold=1)\n",
     "    # grap = scalp.graph.integrate(dataset,hub1_algo = 3, hub1_k = 19, hub2_algo=3, hub2_k=17,  k=11, dataset_adjacency=None,  outlier_threshold=ot)\n",
-    "    grap = scalp.graph.integrate(dataset,hub1_algo = 1, hub1_k = 11, hub2_algo=2, hub2_k=4,  k=13, dataset_adjacency=None,  outlier_threshold=ot)\n",
+    "    grap = scalp.graph.integrate(dataset,hub1_algo = 1, hub1_k = 11, \n",
+    "                                 hub2_algo=2, hub2_k=4,  k=13, \n",
+    "                                 dataset_adjacency=None,  outlier_threshold=ot)\n",
     "    grap = grap != 0\n",
     "    #grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=None, ls =10, outlier_threshold=.9)\n",
     "    # !!!!!!!!!!!!!!!!!!!!!!!!\n",
@@ -372,12 +337,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d4303999-267d-4893-a653-605d80cc4527",
+   "cell_type": "markdown",
+   "id": "3658855d-fb56-485f-a4df-0645d05f1ca5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# COMPARISON + SCORING "
+   ]
   },
   {
    "cell_type": "code",
@@ -386,15 +351,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#################\n",
+    "#   RUN EXPERIMENTS \n",
+    "##############\n",
     "import ubergauss.tools as ut\n",
     "from lmz import *\n",
     "import functools \n",
     "\n",
     "funcs = [scalp.mnn.scanorama, scalp.mnn.bbknnwrap, scalp.mnn.combat, Scalp] \n",
-    "\n",
     "for ot in [.35, .45, .55, .75, .85]:\n",
     "    funcs.append( functools.partial(Scalp, ot=ot))\n",
-    "\n",
     "fuid = Range(funcs)\n",
     "dataid = Range(datasets) \n",
     "tasks = [(f,d) for f in fuid for d in dataid]\n",
@@ -416,8 +382,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "#for ot in [.35, .45, .55, .75, .85]:\n",
+    "################\n",
+    "# UNIFY COLLECT DATA IN A SINGLE STRUCTURE \n",
+    "################\n",
     "fnames = 'scanorama bbknn combat scalp s.35 s.45 s.55 s.75 s.85'.split()\n",
     "# datasets_stack = Map(scalp.transform.stack, datasets) \n",
     "for (fu,da), result in zip(tasks, mydata):\n",
@@ -440,8 +407,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores = { str(i): scalp.score.scalp_scores(datasets[i]) for i in lmz.Range(datasets) }"
+    "######################\n",
+    "# SCORE INSTANCES \n",
+    "######################\n",
+    "scores = { str(i): scalp.score.scalp_scores(datasets[i], label_batch_split=True) for i in lmz.Range(datasets) }"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb988f31-710e-4dd5-8175-6687606c78cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "datasets[0].uns['timeseries']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "384e115a-513d-4690-8f8b-6a2b6c0265f7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -479,8 +467,21 @@
     "    ffnames = base.copy()+[e]\n",
     "    zzzz = compute_method_ranks(scores, ffnames)\n",
     "    print(zzzz)\n",
-    "zzzz = compute_method_ranks(scores, fnames)\n",
-    "zzzz"
+    "\n",
+    "# all the methods\n",
+    "print('########### ALL #######')\n",
+    "print(compute_method_ranks(scores, fnames))\n",
+    "# ts = false\n",
+    "print('############## batch #############')\n",
+    "scores_tsf = [ str(i) for i,e in enumerate(datasets) \n",
+    "                if not datasets[i].uns.get('timeseries',False) ]\n",
+    "scores_tsf = {k:scores[k] for k in scores_tsf}\n",
+    "print(compute_method_ranks(scores_tsf, fnames))\n",
+    "# ts = true \n",
+    "print('########## time series ##########')\n",
+    "scores_ts = [ str(i) for i,e in enumerate(datasets) if datasets[i].uns.get('timeseries',False)    ]\n",
+    "scores_ts = {k:scores[k] for k in scores_ts}\n",
+    "print(compute_method_ranks(scores_ts, fnames))\n"
    ]
   },
   {
