added optimization for the old integrator, option to remove smaller clusters to loading

--- a/notebooks/scalp_demo_2.ipynb
+++ b/notebooks/scalp_demo_2.ipynb
@@ -59,11 +59,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "maxdatasets = 3# USE THIS EVERYWHERE\n",
-    "maxcells = 700\n",
-    "datasets = list(scalp.data.scmark(scalp.test_config.scmark_datapath,  maxdatasets=maxdatasets,  maxcells = maxcells ))\n",
-    "datasets += list(scalp.data.timeseries(scalp.test_config.timeseries_datapath,  maxdatasets=maxdatasets,  maxcells = maxcells ))\n",
-    "datasets +=list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=maxdatasets,  maxcells = maxcells ))\n",
+    "conf = {'maxdatasets':3, 'maxcells':700,'filter_clusters': 15}\n",
+    "datasets = list(scalp.data.scmark(scalp.test_config.scmark_datapath,  **conf))\n",
+    "datasets += list(scalp.data.timeseries(scalp.test_config.timeseries_datapath,**conf))\n",
+    "datasets +=list(scalp.data.scib(scalp.test_config.scib_datapath,**conf))\n",
     "\n",
     "\n",
     "\n",
@@ -78,7 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = datasets[7]\n"
+    "dataset = datasets[12]\n"
    ]
   },
   {
@@ -256,7 +255,7 @@
     "    ax.set_yticks(ticks)\n",
     "    ax.grid(True, color='white', linestyle='--', linewidth=0.5)\n",
     "\n",
-    "def Scalp(dataset, dim = 2, ot= .54):\n",
+    "def Scalp(dataset, dim = 2, ot= .65):\n",
     "    parm = {'neighbors_total': 60, 'intra_neighbors_mutual': False,\n",
     "            'neighbors_intra_fraction': .33, 'add_tree': False, \"epsilon\":-1,\n",
     "                  'copy_lsa_neighbors': False, 'horizonCutoff':0, # this hz cutoff is what we look at \n",
@@ -279,14 +278,9 @@
     "    # stair =  sim.make_stairs(3,[0,1])\n",
     "    # grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=stair, ls=False)\n",
     "\n",
-    "    #grap = scalp.graph.integrate(dataset,hub1_algo = 3, hub1_k = 11, hub2_algo=0, hub2_k=12,  k=11, dataset_adjacency=None,  outlier_threshold=1)\n",
-    "    # grap = scalp.graph.integrate(dataset,hub1_algo = 3, hub1_k = 19, hub2_algo=3, hub2_k=17,  k=11, dataset_adjacency=None,  outlier_threshold=ot)\n",
-    "    grap = scalp.graph.integrate(dataset,hub1_algo = 1, hub1_k = 11, \n",
-    "                                 hub2_algo=2, hub2_k=4,  k=13, \n",
-    "                                 dataset_adjacency=None,  outlier_threshold=ot)\n",
+    "    \n",
+    "    grap = scalp.graph.integrate(dataset,hub1_algo = 2, hub1_k = 12,  hub2_algo=2, hub2_k=12,  k=12,  dataset_adjacency=None,  outlier_threshold=ot)\n",
     "    grap = grap != 0\n",
-    "    #grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=None, ls =10, outlier_threshold=.9)\n",
-    "    # !!!!!!!!!!!!!!!!!!!!!!!!\n",
     "    #  there are many options to expose and some hubness correctors to be implemented\n",
     "    #\n",
     "    #\n",
@@ -327,13 +321,14 @@
     "    dataset.uns['integrated'].append('scalp')\n",
     "    return dataset\n",
     "\n",
-    "if True:\n",
+    "if False:\n",
     "    stack = Scalp(dataset)\n",
     "    scalp.plot(stack,'scalp', color=['batch','label'])\n",
     "else:\n",
     "    for d in datasets:\n",
-    "        stack = Scalp(d)\n",
-    "        scalp.plot(stack,'scalp', color=['batch','label'])"
+    "        if d.uns['timeseries']:\n",
+    "            stack = Scalp(d)\n",
+    "            scalp.plot(stack,'scalp', color=['batch','label'])"
    ]
   },
   {
@@ -358,8 +353,9 @@
     "from lmz import *\n",
     "import functools \n",
     "\n",
-    "funcs = [scalp.mnn.scanorama, scalp.mnn.bbknnwrap, scalp.mnn.combat, Scalp] \n",
-    "for ot in [.35, .45, .55, .75, .85]:\n",
+    "funcs = [scalp.mnn.scanorama, scalp.mnn.bbknnwrap, scalp.mnn.combat] \n",
+    "scalpvalues = [.15, .25, .35, .45, .55, .75, .85, .95]\n",
+    "for ot in scalpvalues:\n",
     "    funcs.append( functools.partial(Scalp, ot=ot))\n",
     "fuid = Range(funcs)\n",
     "dataid = Range(datasets) \n",
@@ -385,12 +381,14 @@
     "################\n",
     "# UNIFY COLLECT DATA IN A SINGLE STRUCTURE \n",
     "################\n",
-    "fnames = 'scanorama bbknn combat scalp s.35 s.45 s.55 s.75 s.85'.split()\n",
+    "fnames = 'scanorama bbknn combat'.split()\n",
+    "fnames+=[f'Scalp: {s}' for s in scalpvalues]\n",
+    "\n",
     "# datasets_stack = Map(scalp.transform.stack, datasets) \n",
     "for (fu,da), result in zip(tasks, mydata):\n",
     "    method = fnames[fu]#result.uns['integrated'][0]\n",
     "    rmeth = method\n",
-    "    if fu > 3:\n",
+    "    if fu > 2:\n",
     "        rmeth = 'scalp'\n",
     "    # print(fu)\n",
     "    datasets[da].obsm[method] = result.obsm[rmeth]\n",
@@ -410,7 +408,7 @@
     "######################\n",
     "# SCORE INSTANCES \n",
     "######################\n",
-    "scores = { str(i): scalp.score.scalp_scores(datasets[i], label_batch_split=True) for i in lmz.Range(datasets) }"
+    "scores = { str(i): scalp.score.scalp_scores(datasets[i], label_batch_split=False) for i in lmz.Range(datasets) }"
    ]
   },
   {
@@ -420,7 +418,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datasets[0].uns['timeseries']"
+    "if False: # this is super slow\n",
+    "    scores_kni = { str(i): scalp.score.kni_scores(datasets[i]) for i in lmz.Range(datasets) }\n",
+    "    dff = pd.DataFrame.from_dict(scores_kni, orient='index')\n",
+    "    average_scores = dff.mean()\n",
+    "'''\n",
+    "scanorama      0.616067\n",
+    "bbknn          0.646266\n",
+    "combat         0.458397\n",
+    "Scalp: 0.15    0.691557\n",
+    "Scalp: 0.25    0.667454\n",
+    "Scalp: 0.35    0.642752\n",
+    "Scalp: 0.45    0.615580\n",
+    "Scalp: 0.55    0.593257\n",
+    "Scalp: 0.75    0.527588\n",
+    "Scalp: 0.85    0.499085\n",
+    "Scalp: 0.95    0.482638\n",
+    "'''"
    ]
   },
   {
@@ -429,7 +443,9 @@
    "id": "384e115a-513d-4690-8f8b-6a2b6c0265f7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "average_scores"
+   ]
   },
   {
    "cell_type": "code",
@@ -556,16 +572,6 @@
     "sc21 = sc2.pivot(index=\"method\", columns=\"dataset\", values=\"label_mean\")\n",
     "sns.heatmap(sc21)\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "330879d1-d683-4d26-a964-f81ad4a57000",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "z"
    ]
   },
   {
@@ -781,7 +787,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_results"
+    "avg_rank"
    ]
   },
   {
