--- a/notebooks/scalp_explore_params.ipynb
+++ b/notebooks/scalp_explore_params.ipynb
@@ -71,6 +71,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3fe2ad41-dde9-4b1c-b985-e75fc07d6d4a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "666e6870-385c-4576-8e13-d1f63e8d3ece",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ubergauss.draw as ud\n",
+    "ud.binned_pairplot(df[df.score>0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "da5f9905-b930-4640-ac9e-de0133bfd145",
    "metadata": {},
    "outputs": [],
