moving stuf out of notebooks and fixing data loaders

--- a/notebooks/scalp_demo_2.ipynb
+++ b/notebooks/scalp_demo_2.ipynb
@@ -59,12 +59,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "conf = {'maxdatasets':3, 'maxcells':700,'filter_clusters': 15}\n",
-    "datasets = list(scalp.data.scmark(scalp.test_config.scmark_datapath,  **conf))\n",
-    "datasets += list(scalp.data.timeseries(scalp.test_config.timeseries_datapath,**conf))\n",
-    "datasets +=list(scalp.data.scib(scalp.test_config.scib_datapath,**conf))\n",
+    "import scalpdemo\n",
     "\n",
+    "datasets, dataset = scalpdemo.get_data()\n",
     "\n",
+    "# conf = {'maxdatasets':10, 'maxcells':1000,'filter_clusters': 15}\n",
+    "# if True:\n",
+    "#     datasets = list(scalp.data.scmark(scalp.test_config.scmark_datapath,  **conf))\n",
+    "#     datasets += list(scalp.data.timeseries(scalp.test_config.timeseries_datapath,**conf))\n",
+    "#     datasets +=list(scalp.data.scib(scalp.test_config.scib_datapath,**conf))\n",
+    "#     dataset = datasets[12]\n",
+    "# else:\n",
+    "#     datasets = list(scalp.data.timeseries(scalp.test_config.timeseries_datapath,datasets = ['s5'],**conf))\n",
+    "#     dataset = datasets[0]\n",
+    "# \n",
     "\n",
     "# datasets = list(scalp.data.scib(scalp.test_config.scib_datapath,  maxdatasets=3,  maxcells = 500 ))\n",
     "# timeseries 1 is difficult for others!!!!!!!!!!!!!!!!!\n"
@@ -77,7 +85,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataset = datasets[12]\n"
+    "\n"
    ]
   },
   {
@@ -248,79 +256,8 @@
     "import umap\n",
     "import pandas as pd\n",
     "\n",
-    "def setup_grid(ax, dataset):\n",
-    "    counts = pd.Series(dataset.obs['batch']).value_counts()\n",
-    "    ticks = np.cumsum([0] + counts).to_list()\n",
-    "    ax.set_xticks(ticks)\n",
-    "    ax.set_yticks(ticks)\n",
-    "    ax.grid(True, color='white', linestyle='--', linewidth=0.5)\n",
     "\n",
-    "def Scalp(dataset, dim = 2, ot= .65):\n",
-    "    parm = {'neighbors_total': 60, 'intra_neighbors_mutual': False,\n",
-    "            'neighbors_intra_fraction': .33, 'add_tree': False, \"epsilon\":-1,\n",
-    "                  'copy_lsa_neighbors': False, 'horizonCutoff':0, # this hz cutoff is what we look at \n",
-    "            'inter_outlier_threshold': -1, 'distance_metric':'euclidean', 'standardize':0,\n",
-    "            'inter_outlier_probabilistic_removal': False}\n",
-    "\n",
-    "\n",
-    "    bestparm = {'neighbors_total': 27,\n",
-    "         'neighbors_intra_fraction': 0.2204608669516461,\n",
-    "         'inter_outlier_threshold': 0.7495085614413425,\n",
-    "         'inter_outlier_probabilistic_removal': 0,\n",
-    "         'intra_neighbors_mutual': 0,\n",
-    "         'copy_lsa_neighbors': 1,\n",
-    "         'add_tree': 0,\n",
-    "         'horizonCutoff': 60,\n",
-    "         'distance_metric': 'euclidean',\n",
-    "         'standardize': 0}\n",
-    "    # parm = {'add_tree': True, 'copy_lsa_neighbors': False, 'inter_outlier_probabilistic_removal': False,  'inter_outlier_threshold': 0.72, 'intra_neighbors_mutual': False, 'neighbors_intra_fraction': 0, 'neighbors_total': 1}\n",
-    "    # grap = scalp.mkgraph(dataset,**bestparm)\n",
-    "    # stair =  sim.make_stairs(3,[0,1])\n",
-    "    # grap = scalp.graph.integrate(dataset, k=10, dataset_adjacency=stair, ls=False)\n",
-    "\n",
-    "    \n",
-    "    grap = scalp.graph.integrate(dataset,hub1_algo = 2, hub1_k = 12,  hub2_algo=2, hub2_k=12,  k=12,  dataset_adjacency=None,  outlier_threshold=ot)\n",
-    "    grap = grap != 0\n",
-    "    #  there are many options to expose and some hubness correctors to be implemented\n",
-    "    #\n",
-    "    #\n",
-    "    # grap = grap.astype(bool)\n",
-    "    # neggraph = sgraph.negstuff(dataset,**parm)\n",
-    "    # scalp.umapwrap.graph_jax(dataset,(csr_matrix(grap), csr_matrix(neggraph)),label = 'umap', n_components = 2)\n",
-    "    \n",
-    "    \n",
-    "    if  False:\n",
-    "        dataset.obsp['connectivities'] = grap\n",
-    "        dataset.obsp['distances'] = grap\n",
-    "        dataset.uns['neighbors'] =  {'params': {'n_neighbors': 15,\n",
-    "      'method': 'umap',\n",
-    "      'metric': 'euclidean',\n",
-    "      'n_pcs': 40,\n",
-    "      #'bbknn': {'trim': 150, 'computation': 'annoy', 'batch_key': 'batch'},\n",
-    "      'use_rep': 'pca40'},\n",
-    "     'distances_key': 'distances',\n",
-    "     'connectivities_key': 'connectivities'}\n",
-    "        sc.tl.umap(dataset,n_components=2)\n",
-    "        grap = dataset.obsm.pop('X_umap')\n",
-    "\n",
-    "\n",
-    "    \n",
-    "    # plt.matshow(grap.todense())\n",
-    "    # setup_grid(plt.gca(), dataset)\n",
-    "    # jplt.colorbar()\n",
-    "    \n",
-    "    # projection = umap.UMAP(n_neighbors = 10).fit_transform(grap)\n",
-    "    \n",
-    "    # projection = umap.UMAP(metric='precomputed', n_neighbors = 60).fit_transform(grap > 0)\n",
-    "    # projection  = scalp.umapwrap.umap_last_experiment(dataset, grap ,label = 'umap', n_components = dim)\n",
-    "    # projection = scalp.umapwrap.graph_pacmap2(False,csr_matrix(grap),label = 'umap', n_components = dim)\n",
-    "    # projection = scalp.umapwrap.graph_umap(False,grap,label = 'umap', n_components = dim) # THIS IS WHAT WE WANT TO USE I GUESS\n",
-    "    # print(\"umap done\")\n",
-    "    dataset.obsm['scalp']= grap\n",
-    "    dataset.uns.setdefault('integrated',[])\n",
-    "    dataset.uns['integrated'].append('scalp')\n",
-    "    return dataset\n",
-    "\n",
+    "Scalp = scalpdemo.Scalp\n",
     "if False:\n",
     "    stack = Scalp(dataset)\n",
     "    scalp.plot(stack,'scalp', color=['batch','label'])\n",
@@ -353,8 +290,10 @@
     "from lmz import *\n",
     "import functools \n",
     "\n",
+    "\n",
+    "\n",
     "funcs = [scalp.mnn.scanorama, scalp.mnn.bbknnwrap, scalp.mnn.combat] \n",
-    "scalpvalues = [.15, .25, .35, .45, .55, .75, .85, .95]\n",
+    "scalpvalues = [.15, .25, .35, .45, .55, .65, .75, .85, .95]\n",
     "for ot in scalpvalues:\n",
     "    funcs.append( functools.partial(Scalp, ot=ot))\n",
     "fuid = Range(funcs)\n",
@@ -408,7 +347,7 @@
     "######################\n",
     "# SCORE INSTANCES \n",
     "######################\n",
-    "scores = { str(i): scalp.score.scalp_scores(datasets[i], label_batch_split=False) for i in lmz.Range(datasets) }"
+    "scores = { str(i): scalp.score.scalp_scores(datasets[i],projection = 'methods', label_batch_split=False) for i in lmz.Range(datasets) }"
    ]
   },
   {
@@ -419,9 +358,10 @@
    "outputs": [],
    "source": [
     "if False: # this is super slow\n",
-    "    scores_kni = { str(i): scalp.score.kni_scores(datasets[i]) for i in lmz.Range(datasets) }\n",
+    "    scores_kni = { str(i): scalp.score.kni_scores(datasets[i], projection='methods') for i in lmz.Range(datasets) }\n",
     "    dff = pd.DataFrame.from_dict(scores_kni, orient='index')\n",
     "    average_scores = dff.mean()\n",
+    "    print(average_scores)\n",
     "'''\n",
     "scanorama      0.616067\n",
     "bbknn          0.646266\n",
@@ -443,9 +383,7 @@
    "id": "384e115a-513d-4690-8f8b-6a2b6c0265f7",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "average_scores"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -459,6 +397,8 @@
     "from scipy.stats import gmean\n",
     "\n",
     "def compute_method_ranks(data, methods):\n",
+    "    if not data:\n",
+    "        return 0\n",
     "    rows = []\n",
     "    for ds, methods_dict in data.items():\n",
     "        for meth, scores in methods_dict.items():\n",
@@ -587,14 +527,18 @@
     "        \"scanorama\": \"red\",\n",
     "    \"bbknn\": \"green\",\n",
     "    \"combat\": \"purple\",\n",
-    "   \"s.35\": \"#0f3e5a\",  # very dark blue (was s.3)\n",
-    "    \"s.45\": \"#165a87\",  # dark blue (was s.2)\n",
-    "    \"s.55\": \"#1f77b4\",  # medium blue (was scalp.4)\n",
-    "    \"scalp\": \"#5faee3\",  # lighter blue (was scalp)\n",
-    "    \"s.75\": \"#a7cce5\",  # even lighter blue (was scalp.75)\n",
-    "    \"s.85\": \"#dceefb\"   # very light blue (was scalp1)\n",
+    "    \"Scalp: 0.15\": \"#0b2b40\",\n",
+    "    \"Scalp: 0.25\": \"#0f3e5a\",  # Original dark blue\n",
+    "    \"Scalp: 0.35\": \"#165a87\",  # Original dark blue\n",
+    "    \"Scalp: 0.45\": \"#1f77b4\",  # Original medium blue\n",
+    "    \"Scalp: 0.55\": \"#4892c7\",\n",
+    "    \"Scalp: 0.65\": \"#73b0da\",  # Mid-point light blue\n",
+    "    \"Scalp: 0.75\": \"#a7cce5\",  # Original lighter blue\n",
+    "    \"Scalp: 0.85\": \"#dceefb\",  # Original very light blue\n",
+    "    \"Scalp: 0.95\": \"#f0f8ff\"   # AliceBlue, almost white\n",
     "}\n",
     "z = pd.DataFrame(scores2)\n",
+    "z = z[z.method != 'scalp']\n",
     "\n",
     "ax = sns.scatterplot(z,x='label_mean', y= 'batch_mean', hue = \"method\",palette = palette, legend=True)\n",
     "ax.legend(bbox_to_anchor=(1.05, 1), loc='upper left', borderaxespad=0.)\n",
@@ -1166,6 +1110,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3bae616e-224c-4c46-ba7e-2d4d123e56e5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24f06ab4-e8d8-4418-9439-1fe40a4ad8a9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "51684478-1ced-489d-9a34-615a3e6d7967",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ff39aa8-e4d9-45bf-b004-643b576358a9",
    "metadata": {},
    "outputs": [],
    "source": []
