improved resiliance of code

--- a/notebooks/scalp_demo_2.ipynb
+++ b/notebooks/scalp_demo_2.ipynb
@@ -79,27 +79,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "114287aa-7ef5-479e-81c4-c1ddc5814bdb",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8434e443-a9b6-49d0-b0f9-278158cdd8bd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# datasets = datasets[:6]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "ba95ee1b-4956-4579-8bff-cfaa89018fe7",
    "metadata": {},
@@ -258,12 +237,12 @@
     "\n",
     "\n",
     "Scalp = scalpdemo.Scalp\n",
-    "if False:\n",
+    "if True:\n",
     "    stack = Scalp(dataset)\n",
     "    scalp.plot(stack,'scalp', color=['batch','label'])\n",
     "else:\n",
     "    for d in datasets:\n",
-    "        if d.uns['timeseries']:\n",
+    "        if not d.uns['timeseries']:\n",
     "            stack = Scalp(d)\n",
     "            scalp.plot(stack,'scalp', color=['batch','label'])"
    ]
@@ -286,28 +265,82 @@
     "#################\n",
     "#   RUN EXPERIMENTS \n",
     "##############\n",
-    "import ubergauss.tools as ut\n",
-    "from lmz import *\n",
-    "import functools \n",
     "\n",
-    "\n",
-    "\n",
-    "funcs = [scalp.mnn.scanorama, scalp.mnn.bbknnwrap, scalp.mnn.combat] \n",
-    "scalpvalues = [.15, .25, .35, .45, .55, .65, .75, .85, .95]\n",
-    "for ot in scalpvalues:\n",
-    "    funcs.append( functools.partial(Scalp, ot=ot))\n",
-    "fuid = Range(funcs)\n",
-    "dataid = Range(datasets) \n",
-    "tasks = [(f,d) for f in fuid for d in dataid]\n",
-    "\n",
-    "def run(fd):\n",
-    "    f,d = fd\n",
-    "    fun = funcs[f]\n",
-    "    dat = datasets[d]\n",
-    "    stack = fun(dat)\n",
-    "    return stack\n",
+    "if True:\n",
+    "    import ubergauss.tools as ut\n",
+    "    from lmz import *\n",
+    "    import functools \n",
     "    \n",
-    "mydata = ut.xxmap(run, tasks) \n"
+    "    \n",
+    "    funcs = [scalp.mnn.scanorama, scalp.mnn.bbknnwrap, scalp.mnn.combat] \n",
+    "    scalpvalues = [.15, .25, .35, .45, .55, .65, .75, .85, .95]\n",
+    "    for ot in scalpvalues:\n",
+    "        funcs.append( functools.partial(Scalp, ot=ot))\n",
+    "    fuid = Range(funcs)\n",
+    "    dataid = Range(datasets) \n",
+    "    tasks = [(f,d) for f in fuid for d in dataid]\n",
+    "    \n",
+    "    def run(fd):\n",
+    "        f,d = fd\n",
+    "        fun = funcs[f]\n",
+    "        dat = datasets[d]\n",
+    "        stack = fun(dat)\n",
+    "        return stack\n",
+    "        \n",
+    "    mydata = ut.xxmap(run, tasks) \n",
+    "    \n",
+    "    \n",
+    "    ################\n",
+    "    # UNIFY COLLECT DATA IN A SINGLE STRUCTURE \n",
+    "    ################\n",
+    "    fnames = 'scanorama bbknn combat'.split()\n",
+    "    fnames+=[f'Scalp: {s}' for s in scalpvalues]\n",
+    "    \n",
+    "    # datasets_stack = Map(scalp.transform.stack, datasets) \n",
+    "    for (fu,da), result in zip(tasks, mydata):\n",
+    "        method = fnames[fu]#result.uns['integrated'][0]\n",
+    "        rmeth = method\n",
+    "        if fu > 2:\n",
+    "            rmeth = 'scalp'\n",
+    "        # print(fu)\n",
+    "        datasets[da].obsm[method] = result.obsm[rmeth]\n",
+    "        datasets[da].uns.setdefault('methods', []).append(method)\n",
+    "        datasets[da].uns.setdefault('integrated', []).append(method)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5445d0b7-eebb-4805-bf1e-ecc157928fcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "for e in datasets:\n",
+    "    if '509' in e.uns['name'] or 'lee' in e.uns['name']:\n",
+    "        scalp.plot2(e, 'bbknn', 'Scalp: 0.45')\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "84c77bce-0b1f-4271-9d52-8ee6b16e6249",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for e in datasets: scalp.plot2(e, 'bbknn', 'Scalp: 0.45')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0b71e3a-720b-4c55-b505-d327a437ac3b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scalpdemo.make_timetable(datasets)"
    ]
   },
   {
@@ -317,23 +350,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "################\n",
-    "# UNIFY COLLECT DATA IN A SINGLE STRUCTURE \n",
-    "################\n",
-    "fnames = 'scanorama bbknn combat'.split()\n",
-    "fnames+=[f'Scalp: {s}' for s in scalpvalues]\n",
     "\n",
-    "# datasets_stack = Map(scalp.transform.stack, datasets) \n",
-    "for (fu,da), result in zip(tasks, mydata):\n",
-    "    method = fnames[fu]#result.uns['integrated'][0]\n",
-    "    rmeth = method\n",
-    "    if fu > 2:\n",
-    "        rmeth = 'scalp'\n",
-    "    # print(fu)\n",
-    "    datasets[da].obsm[method] = result.obsm[rmeth]\n",
-    "    datasets[da].uns.setdefault('methods', []).append(method)\n",
-    "    datasets[da].uns.setdefault('integrated', []).append(method)\n",
+    "# THIS NEEDS TO BE TESTED BUT WE RLY NEED THIS:\n",
+    "datasets, fnames, runtimes =  scalpdemo.run_all(datasets)\n",
     "\n",
+    "runtimes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07309215-5010-4d37-8ce7-4cf6d8823b20",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# SCIB = scalpdemo.scib_score(fnames, datasets) \n",
+    "SCIB_DATA = pd.read_csv(\"SCIB.csv\")\n",
+    "print(scalpdemo.mkscib_table(SCIB_DATA).to_latex())\n",
+    "\n",
+    "#latex_table = pd.DataFrame(runtimes).to_latex(index=False, escape=False, caption=\"Economic Terms Dictionary\", label=\"tab:terms\")\n",
+    "rts = pd.DataFrame(list(runtimes.items()), columns=[\"Item\", \"Value\"])\n",
+    "latex_table = rts.to_latex()\n",
+    "print(latex_table)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb988f31-710e-4dd5-8175-6687606c78cb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if True: # this is super slow\n",
+    "    scores_kni = { str(i): scalp.score.kni_scores(datasets[i], projection='methods') for i in lmz.Range(datasets) }\n",
+    "    dff = pd.DataFrame.from_dict(scores_kni, orient='index')\n",
+    "    average_scores = dff.mean().to_latex()\n",
+    "    print(average_scores)\n",
+    "    \n",
+    "'''\n",
+    "scanorama      0.616067\n",
+    "bbknn          0.646266\n",
+    "combat         0.458397\n",
+    "Scalp: 0.15    0.691557\n",
+    "Scalp: 0.25    0.667454\n",
+    "Scalp: 0.35    0.642752\n",
+    "Scalp: 0.45    0.615580\n",
+    "Scalp: 0.55    0.593257\n",
+    "Scalp: 0.75    0.527588\n",
+    "Scalp: 0.85    0.499085\n",
+    "Scalp: 0.95    0.482638\n",
+    "\n",
+    "\n",
+    "# lastest run not that rosy...........\n",
+    "scanorama      0.697316\n",
+    "bbknn          0.730277\n",
+    "combat         0.515334\n",
+    "Scalp: 0.15    0.683468\n",
+    "Scalp: 0.25    0.656524\n",
+    "Scalp: 0.35    0.631032\n",
+    "Scalp: 0.45    0.607354\n",
+    "Scalp: 0.55    0.573127\n",
+    "Scalp: 0.65    0.535592\n",
+    "Scalp: 0.75    0.497753\n",
+    "Scalp: 0.85    0.475295\n",
+    "Scalp: 0.95    0.519884\n",
+    "\n",
+    "\n",
+    "so going with the small dataset  and not filtering shit takes\n",
+    "\\begin{tabular}{lr}\n",
+    "\\toprule\n",
+    " & 0 \\\\\n",
+    "\\midrule\n",
+    "scanorama & 0.591904 \\\\\n",
+    "bbknn & 0.637113 \\\\\n",
+    "combat & 0.466931 \\\\\n",
+    "Scalp: 0.15 & 0.665008 \\\\\n",
+    "Scalp: 0.25 & 0.636216 \\\\\n",
+    "Scalp: 0.35 & 0.608385 \\\\\n",
+    "Scalp: 0.45 & 0.583107 \\\\\n",
+    "Scalp: 0.55 & 0.558317 \\\\\n",
+    "Scalp: 0.65 & 0.528923 \\\\\n",
+    "Scalp: 0.75 & 0.500803 \\\\\n",
+    "Scalp: 0.85 & 0.482103 \\\\\n",
+    "Scalp: 0.95 & 0.497020 \\\\\n",
+    "\\bottomrule\n",
+    "\\end{tabular}\n",
+    "\n",
+    "\n",
+    "big, no filter:\n",
+    "\\begin{tabular}{lr}\n",
+    "\\toprule\n",
+    " & 0 \\\\\n",
+    "\\midrule\n",
+    "scanorama & 0.667613 \\\\\n",
+    "bbknn & 0.701626 \\\\\n",
+    "combat & 0.500828 \\\\\n",
+    "Scalp: 0.15 & 0.662404 \\\\\n",
+    "Scalp: 0.25 & 0.634419 \\\\\n",
+    "Scalp: 0.35 & 0.610253 \\\\\n",
+    "Scalp: 0.45 & 0.587026 \\\\\n",
+    "Scalp: 0.55 & 0.555211 \\\\\n",
+    "Scalp: 0.65 & 0.513821 \\\\\n",
+    "Scalp: 0.75 & 0.477145 \\\\\n",
+    "Scalp: 0.85 & 0.455892 \\\\\n",
+    "Scalp: 0.95 & 0.503966 \\\\\n",
+    "\\bottomrule\n",
+    "\\end{tabular}\n",
+    "'''\n",
     "\n"
    ]
   },
@@ -347,35 +470,17 @@
     "######################\n",
     "# SCORE INSTANCES \n",
     "######################\n",
-    "scores = { str(i): scalp.score.scalp_scores(datasets[i],projection = 'methods', label_batch_split=False) for i in lmz.Range(datasets) }"
+    "scores = { str(i): scalp.score.scalp_scores(datasets[i],projection = 'methods', label_batch_split=False) for i in lmz.Range(datasets) }\n",
+    "scores"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb988f31-710e-4dd5-8175-6687606c78cb",
+   "id": "8b71046f-c8f8-4ad3-9f96-4dc1e2d8952c",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "if False: # this is super slow\n",
-    "    scores_kni = { str(i): scalp.score.kni_scores(datasets[i], projection='methods') for i in lmz.Range(datasets) }\n",
-    "    dff = pd.DataFrame.from_dict(scores_kni, orient='index')\n",
-    "    average_scores = dff.mean()\n",
-    "    print(average_scores)\n",
-    "'''\n",
-    "scanorama      0.616067\n",
-    "bbknn          0.646266\n",
-    "combat         0.458397\n",
-    "Scalp: 0.15    0.691557\n",
-    "Scalp: 0.25    0.667454\n",
-    "Scalp: 0.35    0.642752\n",
-    "Scalp: 0.45    0.615580\n",
-    "Scalp: 0.55    0.593257\n",
-    "Scalp: 0.75    0.527588\n",
-    "Scalp: 0.85    0.499085\n",
-    "Scalp: 0.95    0.482638\n",
-    "'''"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -383,7 +488,13 @@
    "id": "384e115a-513d-4690-8f8b-6a2b6c0265f7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "for m in scores['0'].keys():\n",
+    "    if 'alp' in m: \n",
+    "        r9,l9 = scalpdemo.make_results_table(scores, datasets,m)\n",
+    "        print(l9)"
+   ]
   },
   {
    "cell_type": "code",
@@ -392,6 +503,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.stats import gmean\n",
@@ -437,7 +549,8 @@
     "print('########## time series ##########')\n",
     "scores_ts = [ str(i) for i,e in enumerate(datasets) if datasets[i].uns.get('timeseries',False)    ]\n",
     "scores_ts = {k:scores[k] for k in scores_ts}\n",
-    "print(compute_method_ranks(scores_ts, fnames))\n"
+    "print(compute_method_ranks(scores_ts, fnames))\n",
+    "'''"
    ]
   },
   {
@@ -447,7 +560,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "scores"
+    "type(score)"
    ]
   },
   {
@@ -610,14 +723,6 @@
     "geomean.index.name = 'method'\n",
     "df_melted = geomean.reset_index().melt(id_vars='method', var_name='dataset', value_name='score')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16c698a1-71c3-4e93-a98a-5e02acedadd9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
